==> RobertRostohar/NXP_Sensor_SDK/drivers/gpio/MK22F/GPIO_MK22F.c <==
#include "fsl_clock.h"
#include "fsl_gpio.h"
#include "fsl_gpio_ex.h"
#include "fsl_port.h"
#include "fsl_port_ex.h"
#include "GPIO_MK22F.h"
#define GPIO_MAX_PORTS          5U
#define GPIO_MAX_PINS           160U

static int32_t GPIO_Setup (ARM_GPIO_Pin_t pin, ARM_GPIO_SignalEvent_t cb_event) {
  PORT_Type *port;
  GPIO_Type *gpio;
  uint32_t   pin_port;
  uint32_t   pin_num;
  int32_t    result = ARM_DRIVER_OK;

  pin_port = pin >> 5U;
  pin_num  = pin & 0x1FU;
  if ((PinMapping[pin_port] & (1U << pin_num)) != 0U) {
    port = PortBase[pin_port];
    gpio = GPIOBase[pin_port];
    CLOCK_EnableClock(ClockIP[pin_port]);
    PORT_SetPinInterruptConfig(port, pin_num, kPORT_InterruptOrDMADisabled);
    GPIO_PinSetDirection(gpio, pin_num, kGPIO_DigitalInput);
    PORT_SetPinConfig(port, pin_num, &DefaultPinConfig);
    if (cb_event != NULL) {
      SignalEvent[pin_port][pin_num] = cb_event;
      NVIC_EnableIRQ(PortIRQn[pin_port]);
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }

  return result;
}

static int32_t GPIO_SetDirection (ARM_GPIO_Pin_t pin, ARM_GPIO_DIRECTION direction) {
  GPIO_Type *gpio;
  uint32_t   pin_port;
  uint32_t   pin_num;
  int32_t    result = ARM_DRIVER_OK;

  pin_port = pin >> 5U;
  pin_num  = pin & 0x1FU;
  if ((PinMapping[pin_port] & (1U << pin_num)) != 0U) {
    gpio = GPIOBase[pin_port];
    switch (direction) {
      case ARM_GPIO_INPUT:
        GPIO_PinSetDirection(gpio, pin_num, kGPIO_DigitalInput);
        break;
      case ARM_GPIO_OUTPUT:
        GPIO_PinSetDirection(gpio, pin_num, kGPIO_DigitalOutput);
        break;
      default:
        result = ARM_DRIVER_ERROR_PARAMETER;
        break;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }
 
  return result;
}

static int32_t GPIO_SetOutputMode (ARM_GPIO_Pin_t pin, ARM_GPIO_OUTPUT_MODE mode) {
  PORT_Type *port;
  uint32_t   pin_port;
  uint32_t   pin_num;
  int32_t    result = ARM_DRIVER_OK;

  pin_port = pin >> 5U;
  pin_num  = pin & 0x1FU;
  if ((PinMapping[pin_port] & (1U << pin_num)) != 0U) {
    port = PortBase[pin_port];
    switch (mode) {
      case ARM_GPIO_PUSH_PULL:
        PORT_EnablePinOpenDrain(port, pin_num, false);
        break;
      case ARM_GPIO_OPEN_DRAIN:
        PORT_EnablePinOpenDrain(port, pin_num, true);
        break;
      default:
        result = ARM_DRIVER_ERROR_PARAMETER;
        break;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }
 
  return result;
}

static int32_t GPIO_SetPullResistor (ARM_GPIO_Pin_t pin, ARM_GPIO_PULL_RESISTOR resistor) {
  PORT_Type *port;
  uint32_t   pin_port;
  uint32_t   pin_num;
  int32_t    result = ARM_DRIVER_OK;

  pin_port = pin >> 5U;
  pin_num  = pin & 0x1FU;
  if ((PinMapping[pin_port] & (1U << pin_num)) != 0U) {
    port = PortBase[pin_port];
    switch (resistor) {
      case ARM_GPIO_PULL_NONE:
        PORT_SetPinPullConfig(port, pin_num, kPORT_PullDisable);
        break;
      case ARM_GPIO_PULL_UP:
        PORT_SetPinPullConfig(port, pin_num, kPORT_PullUp);
        break;
      case ARM_GPIO_PULL_DOWN:
        PORT_SetPinPullConfig(port, pin_num, kPORT_PullDown);
        break;
      default:
        result = ARM_DRIVER_ERROR_PARAMETER;
        break;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }
 
  return result;
}

static int32_t GPIO_SetEventTrigger (ARM_GPIO_Pin_t pin, ARM_GPIO_EVENT_TRIGGER trigger) {
  PORT_Type *port;
  uint32_t   pin_port;
  uint32_t   pin_num;
  int32_t    result = ARM_DRIVER_OK;

  pin_port = pin >> 5U;
  pin_num  = pin & 0x1FU;
  if ((PinMapping[pin_port] & (1U << pin_num)) != 0U) {
    port = PortBase[pin_port];
    switch (trigger) {
      case ARM_GPIO_TRIGGER_NONE:
        PORT_SetPinInterruptConfig(port, pin_num, kPORT_InterruptOrDMADisabled);
        break;
      case ARM_GPIO_TRIGGER_RISING_EDGE:
        PORT_SetPinInterruptConfig(port, pin_num, kPORT_InterruptRisingEdge);
        break;
      case ARM_GPIO_TRIGGER_FALLING_EDGE:
        PORT_SetPinInterruptConfig(port, pin_num, kPORT_InterruptFallingEdge);
        break;
      case ARM_GPIO_TRIGGER_EITHER_EDGE:
        PORT_SetPinInterruptConfig(port, pin_num, kPORT_InterruptEitherEdge);
        break;
      default:
        result = ARM_DRIVER_ERROR_PARAMETER;
        break;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }
 
  return result;
}

static void GPIO_SetOutput (ARM_GPIO_Pin_t pin, uint32_t val) {
  GPIO_Type *gpio;
  uint32_t   pin_port;
  uint32_t   pin_num;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 5U;
    pin_num  = pin & 0x1FU;
    gpio = GPIOBase[pin_port];
    GPIO_PinWrite(gpio, pin_num, (uint8_t)val);
  }
}

static uint32_t GPIO_GetInput (ARM_GPIO_Pin_t pin) {
  GPIO_Type *gpio;
  uint32_t   pin_port;
  uint32_t   pin_num;
  uint32_t   val = 0U;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 5U;
    pin_num  = pin & 0x1FU;
    gpio = GPIOBase[pin_port];
    val = GPIO_PinRead(gpio, pin_num);
  }

  return val;
}
